--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" href="./favicon.ico">
+    <title>Title</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
+    <!--! use [ npm run serve ] to serve the website with the vue CLI 'default runs on localhost:8080'-->
+    
+    <div id="app">
+
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
