--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,20 @@
     <title>Title</title>
   </head>
   <body>
-    <!--! use [ npm run serve ] to serve the website with the vue CLI 'default runs on localhost:8080'-->
-    
-    <div id="app">
+    <!--! use [ npm run serve ] to serve the website with the vue CLI 'default runs on localhost:8080' this command will not use anything outside of the vue CLI-->
+    <!-- * the id #app is the 'name' that the vue CLI, .vue files, will be looking for-->
 
+    <div id="app">
+      <!-- ? built files will be auto injected -->
     </div>
-    <!-- built files will be auto injected -->
+
+
+    <!-- TODO -->
+      <!--? questions >>>>-->
+        <!--
+
+        -->
+      <!--? <<<< questions-->
+    
   </body>
 </html>
