added vue-router, componentizing .html from trucker_mile_tracker dir

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <!-- TODO -->
       <!--? questions >>>>-->
         <!--
-
+          within a component, how do i run functions from main.js?
+          
         -->
       <!--? <<<< questions-->
     
